<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Login">

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/gridLayout"
        android:layout_width="500dp"
        android:layout_height="750dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:columnCount="3"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pinEntered">

        <Button
            android:id="@+id/button1"
            android:layout_margin="7dp"
            android:background="@drawable/login_button_selector"
            android:textSize="50sp"
            android:layout_gravity="fill"
            android:text="@string/one"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            />

        <Button
            android:id="@+id/button2"
            android:layout_margin="7dp"
            android:background="@drawable/login_button_selector"
            android:textSize="50sp"
            android:layout_gravity="fill"
            android:text="@string/two"
            android:layout_columnWeight="1"/>

        <Button
            android:id="@+id/button3"
            android:layout_margin="7dp"
            android:background="@drawable/login_button_selector"
            android:textSize="50sp"
            android:layout_gravity="fill"
            android:text="@string/three"
            android:layout_columnWeight="1"/>


        <Button
            android:id="@+id/button4"
            android:layout_margin="7dp"
            android:background="@drawable/login_button_selector"
            android:textSize="50sp"
            android:layout_gravity="fill"
            android:text="@string/four"
            android:layout_rowWeight="1"/>

        <Button
            android:id="@+id/button5"
            android:layout_margin="7dp"
            android:background="@drawable/login_button_selector"
            android:textSize="50sp"
            android:layout_gravity="fill"
            android:text="@string/five" />

        <Button
            android:id="@+id/button6"
            android:layout_margin="7dp"
            android:background="@drawable/login_button_selector"
            android:textSize="50sp"
            android:layout_gravity="fill"
            android:text="@string/six" />

        <Button
            android:id="@+id/button7"
            android:layout_margin="7dp"
            android:background="@drawable/login_button_selector"
            android:textSize="50sp"
            android:layout_gravity="fill"
            android:text="@string/seven"
            android:layout_rowWeight="1"/>

        <Button
            android:id="@+id/button8"
            android:layout_margin="7dp"
            android:background="@drawable/login_button_selector"
            android:textSize="50sp"
            android:layout_gravity="fill"
            android:text="@string/eight" />

        <Button
            android:id="@+id/button9"
            android:layout_margin="7dp"
            android:background="@drawable/login_button_selector"
            android:textSize="50sp"
            android:layout_gravity="fill"
            android:text="@string/nine" />

        <Button
            android:id="@+id/button0"
            android:layout_column="1"
            android:layout_margin="7dp"
            android:background="@drawable/login_button_selector"
            android:textSize="50sp"
            android:layout_gravity="fill"
            android:text="@string/zero"
            android:layout_rowWeight="1"/>

        <Button
            android:id="@+id/enter"
            android:layout_columnSpan="3"
            android:layout_gravity="fill"
            android:layout_margin="25dp"
            android:height="60dp"
            android:textSize="50sp"
            android:text="@string/enter"
            android:textColor="#ffffff"
            android:backgroundTint="#000000"
            android:padding="15dp"
            android:layout_rowWeight="10"/>

    </GridLayout>


    <TextView
        android:id="@+id/pinEntered"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:text="@string/enter_pin"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:background="#000000"
        android:textSize="120sp"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>